--- a/css/style.scss
+++ b/css/style.scss
@@ -383,6 +383,9 @@ header {
     }
 }
 
+.wp_pagenavi {
+    color: #333;
+}
 //service
 .service {
     background: linear-gradient(180deg, #3e3e3e 0%, #3e3e3e 400px, transparent 400px, transparent 100%);
